--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="./css/styles.css" />  
   </head>
   <body>
-      <h1>Hello world</h1>
+
+    <div class="search-bar">
+      <form class="search-form" autocomplete="off">
+        <input type="text" class="search-input" placeholder="Search images..." name="search">
+        <button type="submit" class="search-button">Search</button>
+      </form>
+    </div>
+
+    <ul class="image-content"></ul>
+    
+    <script src="iziToast.min.js" type="text/javascript"></script>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
