--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-js-hw-11</title>
-    <link rel="stylesheet" href="./css/styles.css" />  
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-
     <div class="search-bar">
       <form class="search-form" autocomplete="off">
-        <input type="text" class="search-input" placeholder="Search images..." name="search">
+        <input
+          type="text"
+          class="search-input"
+          placeholder="Search images..."
+          name="search"
+        />
         <button type="submit" class="search-button">Search</button>
       </form>
     </div>
-
     <ul class="image-content"></ul>
-    
-    <script src="iziToast.min.js" type="text/javascript"></script>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
