--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
           name="search"
         />
         <button type="submit" class="search-button">Search</button>
+        <div class="loader">Loading images, please wait...</div>
       </form>
     </div>
     <ul class="image-content"></ul>
